tests/cases/compiler-development/artifact/errors/diagnostic-borrow-after-move.diagnostic
diagnostic error code=O0001 family=ownership message="cannot use moved binding 'token'" sources=1 labels=3 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-after-move.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-after-move.ari" bytes=210
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-after-move.ari" line=13 column=22 end_line=13 end_column=27 byte_start=200 byte_end=205 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-borrow-after-move.ari:13:22\n    |\n 13 |   return inspect(ref token);\n    |                      ^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-after-move.ari" line=12 column=11 end_line=12 end_column=16 byte_start=171 byte_end=176 message="binding 'token' was moved here"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-borrow-after-move.ari:12:11\n    |\n 12 |   consume(token);\n    |           ^^^^^"
  Label index=2 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-after-move.ari" line=11 column=7 end_line=11 end_column=12 byte_start=141 byte_end=146 message="binding 'token' was declared here"
  Snippet label=2 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-borrow-after-move.ari:11:7\n    |\n 11 |   let token: own i64 = 7;\n    |       ^^^^^"
  Note index=0 location=none message="ownership state is tracked after moves, drops, and control-flow joins"
  Help index=0 location=none message="move this use before the move of 'token' or bind a fresh value"
